AI icon alignment & text colour fixes.

--- a/style.css
+++ b/style.css
@@ -54,9 +54,22 @@ body {
 	content: "";
 	display: inline-block;
 	background-image: url('img/abstergo/industry.svg');
-	background-size: contain;
-	width: 48px;
-	height: 48px;
+    background-size: contain;
+    vertical-align: middle;
+	width: 30px;
+	height: 30px;
+}
+
+.primary-menu ul a {
+    color: #1c1c1c;
+}
+
+.menu-modal-inner {
+    background-color: #1c1c1c;
+}
+
+.search-modal .search-field {
+    color: #1c1c1c;
 }
 
 /* colours */
@@ -91,6 +104,7 @@ input[type="submit"],
 :root .has-accent-background-color,
 .comment-reply-link {
     background-color: #bfbfbf;
+    color: #1c1c1c;
 }
 
 .fill-children-accent,
